@@ -1,3 +1,11 @@
+Configuration builder 7.x-1.x-dev, xxxx-xx-xx (development release)
+--------------------------------------------------------------------------------
+
+- Added Setup module integration.
+- Fixed issues with reverting a configuration page.
+
+
+
 Configuration builder 7.x-1.0, 2012-07-31
 --------------------------------------------------------------------------------
 
